--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
