--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/styled-components": "^5.1.9",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.7.1",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.1.3",
     "react-router-dom": "^5.2.0",
