--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
+    "clsx": "^1.1.1",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.7.1",
